# MCC

./: .gitignore  .gitpod.yml  LICENSE  PyWhatKit_DB.txt  README.md  aboutus.html  app.py  contact.html  documents.html  feature.txt  galery.html  index.html  membership.html  models.py  news-full.html  news-single.html  pyproject.toml  qucklinks.html  requirements.txt  setup.py  sql comm.txt  team.html  teams.html  whatsappjs.js  wsgi.py
.pyenv/: pyvenv.cfg
.pyenv/Scripts/: activate  activate.bat
api/: membership_submit.php
config/: database.php
css/: all.css  bootstrap.min.css  custom.css  owl.carousel.min.css
instance/: mcc_website.db
js/: isotope.pkgd.min.js  owl.carousel.min.js
mcc/: __init__.py  constants.py  crud.py  msgtest.py  pdf.py  schemas.py  util.py
mcc/models/: __init__.py
mcc/static/: autosuggest.css  core.css  icon-font.min.css  instorenew_add.css  main.js  sidebar_style.css  style.css  styles.css
mcc/templates/: CHECK  admin_dashboard.html  check.html  chiplevel.html  chiplevel_add_task.html  customer_review.html  customer_works.html  customers.html  expenditure.html  follow_up.html  instore.html  instore_add_task.html  instore_work_view.html  instorenew.html  instorenew_add.html  layout.html  login.html  onsite.html  onsite_task_view.html  onsitenew.html  onsitenew_add.html  order.html  partner_work_view.html  partners.html  quotation.html  sidebar_admin.html  sidebar_new_admin.html  sidebar_new_technician.html  (+19 more)
models/: Membership.php
streamlit_env/: pyvenv.cfg
templates/: index.html  membership.html  membership_status.html
(+13 files in other folders)
