[tool.poetry]
name = "service-web"
version = "0.1.0"
description = ""
authors = ["Pranav Raj H <vinstarpranav@gmail.com>"]
readme = "README.md"
packages = [{include = "service_web"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Jinja2 = "^3.1.2"
SQLAlchemy = "^1.4.41"
Flask-SQLAlchemy = "^2.5.1"
black = "^22.8.0"
pymysql = "^1.1.0"
fpdf = "^1.7.2"
cryptography = "^41.0.7"
python-jose = "^3.3.0"
pydantic = "^2.5.3"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
